--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libmultiplayer = { path = "../libmultiplayer" }
+ggezmulti = { path = "../ggezmulti" }
 ggez = "0.5.1"
 ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", branch = "devel"}
 clap = "2"
