--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libmultiplayer = { path = "../libmultiplayer" }
+ggezmulti = { path = "../ggezmulti" }
 warp = "0.2.5"
 tokio = { version = "0.2", features = ["full"] }
 futures = { version = "0.3", default-features = false }
