--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "game-server"
+name = "server"
 version = "0.1.0"
 authors = ["d <d@kasofsk.xyz>"]
 edition = "2018"
@@ -8,11 +8,14 @@ edition = "2018"
 
 [dependencies]
 ggezmulti = { path = "../ggezmulti" }
-warp = "0.2.5"
-tokio = { version = "0.2", features = ["full"] }
+warp = "0.3.1"
+tokio = { version = "1.9", features = ["full"] }
+tokio-stream = "0.1.7"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "0.4", features = ["serde", "v4"] }
 rand = "0.7.3"
 reqwest = { version = "0.10", features = ["json"] }
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4.14"
+simple_logger = "1.12.0"
